Revision history for {{$dist->name}}

{{$NEXT}}
  - Fix warning in FFI::Build when verbose off
  - Allow arry file spec for FFI::Buuild source method

0.82      2019-02-10 10:34:57 -0500
  - Production release identical to 0.81_04

0.81_04   2019-02-08 14:49:20 -0500
  - Diagnostic release

0.81_02   2019-02-05 12:19:50 -0500
  - Diagnostic release

0.81_01   2019-02-04 11:51:52 -0500
  - Diagnostic release

0.80      2019-02-01 15:36:50 -0500
  - Fix incompatability with parallel bsd make

0.79      2019-01-31 20:58:07 -0500
  - Fix probe runner builder bug (gh#112, gh#113)

0.78      2019-01-30 10:28:22 -0500
  - Production release identical to 0.77_03

0.77_03   2019-01-29 21:44:29 -0500
  - Remove Java gcj examples.  The gcj compiler has been deprecated,
    unmaintained, and removed from the gcc collection for quite a while
    now.
  - Fix problem diagnostic window on Windows during probe

0.77_02   2019-01-29 11:30:56 -0500
  - Fix regressions in 0.77_01

0.77_01   2019-01-28 15:47:07 -0500
  - Honor compiler and linker flag overrides provided on the command-line
    for FFI::Probe::Runner::Builder, make ffi and make ffi-test (gh#104)

0.76_01   2019-01-20 20:14:45 -0500
  - function method can now take a wrapper code reference as its last
    argument in the same way as attach.

0.75_01   2019-01-19 04:45:19 -0500
  - Add strndup to FFI::Platypus::Memory

0.74      2019-01-19 04:42:22 -0500
  - Production release identical to 0.73_01

0.73_01   2019-01-13 18:31:33 -0500
  - Remove dependency on Win32::ErrorMode on Windows

0.72_01   2019-01-11 22:17:11 -0500
  - Remove dependency on Config::AutoConf

0.71_01   2019-01-10 23:29:06 -0500
  - Merge FFI-Build into this distribution
  - Add FFI::Probe

0.70_01   2019-01-10 15:34:57 -0500
  - prereq fix: IPC::Cmd as a configure requires
    since it doesn't come with Perl 5.8.x

0.69_01   2019-01-09 15:59:43 -0500
  - require Alien::FFI in fallback mode

0.68_01   2019-01-05 21:12:47 -0500